--- a/mvc_clase/public/css/general.css
+++ b/mvc_clase/public/css/general.css
@@ -22,10 +22,17 @@ body, html{
     border-radius: 4px;
 }
 
-.contacto{
-    background-color: #021926;
+.contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    height: 80vh
 }
 
-.contenedor{
-    align-items: center;
+.contacto {
+    background-color: #021926;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    width: 300px;
 }
